<resources>
    <string name="app_name">SQUABLE</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Squable</string>
    <string name="nav_header_subtitle">Text over Audio</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_message">Message</string>
    <string name="menu_me">Me</string>
    <string name="menu_settings">Settings</string>
    <string name="messages_title">Incoming</string>
    <string name="scroll_content">incoming_messages</string>
    <string name="scroll_all">All</string>
    <string name="scroll_from">From</string>
    <string name="scroll_to_me">To Me</string>
    <string name="scroll_sent">Sent</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login_to_continue">Login to Continue</string>
    <string name="call_sign">Call Sign</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="forget_password">Forgot Password</string>
    <string name="create_new_account">Create New Account</string>
    <string name="add_image">Add Image</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">submit</string>
</resources>